--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -39,6 +39,7 @@
     {% section "header" %}
     {% content_for_index %}
     {% section "footer" %}
+    {% include "powered_by" %}
 
     <!-- Javascripts ================================================== -->
     {{ 'core.js' | kajabi_asset_url | script_tag }}
