--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -25,6 +25,13 @@
     <!-- Boostrap CSS ================================================== -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <!-- Google Fonts ================================================== -->
+    {% if settings.font_family ==  settings.heading_font_family%}
+      <link href="//fonts.googleapis.com/css?family={{ settings.font_family | replace: ' ', '+' }}:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    {% else %}
+      <link href="//fonts.googleapis.com/css?family={{ settings.font_family | replace: ' ', '+' }}:400,700,400italic,700italic|{{ settings.heading_font_family | replace: ' ', '+' }}:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    {% endif %}
+
     <!-- Kajabi CSS ================================================== -->
     {{ 'core.css' | kajabi_asset_url | stylesheet_tag }}
     {{ 'styles.css' | asset_url | stylesheet_tag }}
