--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -54,6 +54,7 @@ a {
   }
   a {
     margin-right: 20px;
+    font-weight: 600;
   }
 }
 
@@ -66,6 +67,22 @@ a {
   }
   a {
     margin-right: 20px;
+    font-weight: 600;
+  }
+  .dropdown {
+    &-menu {
+      left: auto !important;
+      right: 0;
+    }
+    img {
+      border-radius: 50%;
+    }
+    a {
+      display: block;
+      padding: 5px 15px;
+      margin-right: 0;
+      font-size: 14px;
+    }
   }
 }
 
