--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -48,13 +48,11 @@ a {
 .footer {
   background: #fff;
   padding: 20px 0;
-  border-top: 1px solid $color-offset;
   img {
     height: 40px;
   }
   a {
     margin-right: 20px;
-    font-weight: 600;
   }
 }
 
@@ -67,7 +65,6 @@ a {
   }
   a {
     margin-right: 20px;
-    font-weight: 600;
   }
   .dropdown {
     &-menu {
@@ -93,5 +90,18 @@ a {
   font-size: 14px;
   a {
     color: #222;
+  }
+}
+
+.section {
+  background: #fff;
+  padding: 80px 0;
+  border-bottom: 1px solid $color-offset;
+  &-title {
+    margin-bottom: 80px;
+    text-align: center;
+  }
+  img {
+    max-width: 100%;
   }
 }
