--- a/styles/sections/_header.scss
+++ b/styles/sections/_header.scss
@@ -1,7 +1,7 @@
 .header {
   background: #fff;
   padding: 20px 0;
-  border-bottom: 1px solid $color-offset;
+  border-bottom: 1px solid var(--color-offset);
   img {
     height: 40px;
   }
