--- a/styles/sections/_powered_by.scss
+++ b/styles/sections/_powered_by.scss
@@ -1,5 +1,5 @@
 .powered-by {
-  background: $color-offset;
+  background: var(--color-offset);
   padding: 15px;
   text-align: center;
   font-size: 14px;
