--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -36,7 +36,7 @@
 
     <!-- Kajabi CSS ================================================== -->
     {{ 'core.css' | kajabi_asset_url | stylesheet_tag }}
-    {{ 'styles.css' | asset_url | stylesheet_tag }}
+    {{ 'styles.min.css' | asset_url | stylesheet_tag }}
     {{ 'overrides.css' | asset_url | stylesheet_tag }}
 
     <!-- Header hook ====================================================== -->
