--- a/styles/sections/_section.scss
+++ b/styles/sections/_section.scss
@@ -1,12 +1,9 @@
 .section {
-  background: #fff;
-  padding: 80px 0;
-  border-bottom: 1px solid var(--color-offset);
-  &-title {
-    margin-bottom: 80px;
-    text-align: center;
+  border-bottom: 1px solid #eee;
+  &-sm {
+    @extend .section;
   }
-  img {
-    max-width: 100%;
+  &-lg {
+    @extend .section;
   }
 }
