--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,5 @@
 @import 'core/breakpoints';
-@import 'core/layout';
+@import 'core/helpers';
 @import 'core/typography';
 
 @import 'sections/footer';
