--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,6 @@
 @import 'core/breakpoints';
 @import 'core/helpers';
+@import 'core/messages';
 @import 'core/typography';
 
 @import 'sections/footer';
