--- a/snippets/block_image.liquid
+++ b/snippets/block_image.liquid
@@ -1,9 +1,9 @@
 <div class="{{ block.settings.width }}" kjb-settings-id="{{ 'image' | settings_id: section: section, block: block }}">
   {% if block.settings.img_action == "" %}
-    <img data-src="{{ block.settings.image | image_picker_url: 'placeholder.png' }}" class="lazyload"/>
+    <img src="{{ block.settings.image | image_picker_url: 'placeholder.png' }}"/>
   {% else %}
     <a href="{{ block.settings.img_action }}">
-      <img data-src="{{ block.settings.image | image_picker_url: 'placeholder.png' }}" class="lazyload"/>
+      <img src="{{ block.settings.image | image_picker_url: 'placeholder.png' }}"/>
     </a>
   {% endif %}
 </div>
