variables in one place

--- a/styles/core/_typography.scss
+++ b/styles/core/_typography.scss
@@ -1,7 +1,7 @@
 body {
-  font-family: var(--font-default);
+  font-family: $font-family;
 }
 
 a {
-  color: var(--color-primary);
+  color: $color-primary;
 }
