--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -1,4 +1,5 @@
 @import 'core/breakpoints';
+@import 'core/variables';
 @import 'core/helpers';
 @import 'core/messages';
 @import 'core/typography';
